<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movies.popular.albert.popularmovies.MainActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/activity_movie_detail"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_movie_detail">

            <ImageView
                android:id="@+id/header"
                android:contentDescription="@string/header_description"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Chappie"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintBottom_toTopOf="@+id/header"
                app:layout_constraintLeft_toRightOf="@+id/header"
                app:layout_constraintVertical_bias="0.525"
                app:layout_constraintRight_toLeftOf="@+id/header" />

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:contentDescription="@string/poster_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2015"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.351"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/movie_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8.6/10★"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date"
                app:layout_constraintLeft_toLeftOf="@+id/movie_release_date" />

            <TextView
                android:id="@+id/movie_plot_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Set in the near future, where automated robots now comprise the law enforcement, a unique robot named Chappie, with truly a mind of his own, gets created under unusual circumstances."
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" />

            <Switch
                android:id="@+id/favoriteSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_button"
                app:layout_constraintLeft_toLeftOf="@+id/movie_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/movie_vote_average" />

            <View
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_plot_synopsis"
                android:id="@+id/view"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp" />

            <TextView
                android:id="@+id/trailers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginStart="8dp"
                android:textSize="20sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_text"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_error_trailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/error_trailers"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_text"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view_2"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/reviews_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_text"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/view_2"
                app:layout_constraintLeft_toLeftOf="parent" />


            <ProgressBar
                android:id="@+id/progress_bar_details"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/rv_trailers"
                app:layout_constraintVertical_bias="0.7"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_text"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_error_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginLeft="8dp"
                android:text="@string/error_reviews"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_text"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


        </android.support.constraint.ConstraintLayout>



    </ScrollView>


    <TextView
        android:id="@+id/tv_error_connection_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/error_detailActivity"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>